2003-10-21  Bjorn Giesler <bjoern@giesler.de>

	* Source/GSServicesManager.m: Fix NSPerformService() to work for
	any localised service name.

2003-10-21  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSServicesManager.m: Revert last modification in favour
	of a fix by ... Bjorn.

2003-10-20  Adam Fedor  <fedor@gnu.org>

	* Source/NSApplication.m (-changeWindowsItem:title:filename:): Use
	deminiaturize to get the window back.

	* Source/NSWindow.m (-deminiaturize:): Don't order out
	the miniwindow since it should be ordered out automatically.
	Fixes PR #5849.

2003-10-18  16:48  Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSOutlineView.m: Added full gsdoc documentation for this class.
	
2003-10-17  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSServicesManager.m: Make mapping of service names to
	their definitions include all available language variants so
	that NSPerformService() should work irrespective of the
	currently selected language preferences.  Tested to ensure it
	still works for my selected english, but not yet to see if it
	actually fixes the bug.

2003-10-13  Adam Fedor  <fedor@gnu.org>

	* configure.ac: Simplify graphics libs lookup
	* config.make.in: Update.
	
	* Documentation/make_services.1: New file (from Martin Brecher)
	* Documentation/GNUmakefile: Install it.

2003-10-09  Adam Fedor  <fedor@gnu.org>

	* Tools/make_services.m: Add quiet option.

2003-10-07 23:38  Gregory John Casamento <greg_casamento@yahoo.com>

	* Headers/Additions/GNUstepGUI/GSNibTemplates.m: Added
	setDeferFlag: and deferFlag declarations to 
	GSWindowTemplate.

2003-10-07 14:32  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSWindow.m (-miniaturize:): Check that the window is
	miniaturizable, visible, and not already miniaturized before
	trying to miniaturize it.
	(-deminiaturize:): Do nothing if the window isn't miniaturized.
	(Based on patch from Matt Rice.)

2003-10-05  Adam Fedor  <fedor@gnu.org>
